--- a/test-website/index.html
+++ b/test-website/index.html
@@ -374,6 +374,7 @@
         <div class="wallet-info" id="wallet-status">
             🔗 <button class="btn btn-primary" onclick="window.walletConnections.connectAllWallets()" style="padding: 8px 20px; margin: 0 10px;">Connect All Wallets</button>
             <button class="btn btn-secondary" onclick="window.walletConnections.showTestnetInfo()" style="padding: 8px 20px;">Testnet Info</button>
+            <button class="btn btn-success" onclick="window.walletConnections.testNearMetadata()" style="padding: 8px 20px; margin-left: 10px;">Test NEAR Metadata</button>
         </div>
 
         <div class="test-notice">
@@ -1001,6 +1002,7 @@
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/near-api-js@2.1.4/dist/near-api-js.min.js"></script>
     <script src="blockchain.js"></script>
     <script src="mintbase-integration.js"></script>
     <script src="wallet-connections.js"></script>
